# spacex-launch-tracker

./: .gitignore  .swp  README.md  Read_bk.md  main.py  pyproject.toml  requirements.txt
cache/: launches.json  launchpads.json
spacex_tracker/: api.py  cache.py  launches.py  stats.py  utils.py
tests/: test_api.py  test_launches.py  test_stats.py
