[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacex-tracker"
version = "0.1.0"
description = "A SpaceX Launch Tracker app using SpaceX API v4"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "requests",
  "pandas",
  "pytest"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
